--- a/.github/workflows/cla.yml
+++ b/.github/workflows/cla.yml
@@ -17,6 +17,8 @@ jobs:
 
   check:
     runs-on: ubuntu-latest
+    env:
+      AUTHOR: ${{ github.event.pull_request.user.login }}
     steps:
     - uses: actions/checkout@v2
     - run: ./project/scripts/check-cla.sh
